fixed anchor sections spacing

--- a/assets/scss/templates/_templates.scss
+++ b/assets/scss/templates/_templates.scss
@@ -3,3 +3,18 @@
 @import "single-project/single-project";
 @import "pagination";
 @import "home/home";
+
+//Section spacing
+section{
+    margin-top: 75px;
+    margin-bottom: 50px;
+
+    //sections anchor offset
+    &::before {
+        content: '';
+        display: block;
+        height:      75px;
+        margin-top: -75px;
+        visibility: hidden;
+    }
+}
